@@ -1,5 +1,6 @@
 MPD_sima v0.16.1
 
+ * tags plugin: Add album queue mode
  * tags plugin: Ensure metadata used in filter are enabled
  so that MPD exposes them (closes #38)
 
